--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -89,6 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingTop="4dp"
                 android:text="Enter User Email" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,6 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:paddingTop="4dp"
                 android:text="Enter User Password" />
 
             <com.google.android.material.textfield.TextInputEditText
