--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!--Text Appearances Start Region-->
     <style name="Text_Headline6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textColor">@color/primaryLightColor</item>
     </style>
@@ -16,25 +18,46 @@
         <item name="android:textColor">@color/primaryLightColor</item>
     </style>
 
-    <style name="JTextEdit" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+    <style name="JPrimaryToolBar_Text" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">@color/primaryDarkColor</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="JPrimaryTabBar_Text" parent="TextAppearance.MaterialComponents.Button">
+        <item name="textAllCaps">true</item>
+    </style>
+    <!--Text Appearances End Region-->
+
+
+    <!--Button Start Region-->
+    <style name="JPrimaryButton" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="backgroundTint">@color/secondaryDarkColor</item>
+    </style>
+    <!--Button End Region-->
+
+
+    <!--TextEdit Start Region-->
+    <style name="JTextEdit" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="colorAccent">@color/secondaryColor</item>
+        <item name="android:colorControlNormal">@color/secondaryColor</item>
+        <item name="android:colorControlHighlight">@color/secondaryColor</item>
+        <item name="android:colorControlActivated">@color/secondaryColor</item>
+
         <item name="android:textColorHint">@color/primaryLightColor</item>
-        <item name="hintTextColor">@color/primaryLightColor</item>
         <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:textAppearance">@style/Text_Subtitle2</item>
         <item name="boxBackgroundColor">@color/primaryColor</item>
-        <item name="boxStrokeColor">@color/primaryLightColor</item>
-        <item name="boxStrokeWidth">2dp</item>
+        <item name="hintTextColor">@color/primaryLightColor</item>
     </style>
 
     <style name="JTextEditHelper" parent="Text_Subtitle2">
         <item name="android:paddingLeft">8dp</item>
     </style>
+    <!--TextEdit End Region-->
 
-    <style name="JPrimaryButton" parent="Widget.MaterialComponents.Button">
-        <item name="android:textColor">@color/primaryTextColor</item>
-        <item name="backgroundTint">@color/secondaryDarkColor</item>
-    </style>
 
+    <!--ToolBarMenu Start Region-->
     <style name="JToolBarMenu" parent="Widget.MaterialComponents.PopupMenu">
         <item name="android:background">@color/primaryColor</item>
         <item name="popupMenuBackground">@color/primaryColor</item>
@@ -42,35 +65,33 @@
         <item name="textAppearanceSmallPopupMenu">@style/Text_Subtitle2</item>
         <item name="textAppearanceLargePopupMenu">@style/Text_Subtitle2</item>
     </style>
+    <!--ToolBarMenu End Region-->
 
-    <style name="JPrimaryToolBar_Text" parent="TextAppearance.MaterialComponents.Headline6">
-        <item name="android:textColor">@color/primaryDarkColor</item>
-        <item name="android:textStyle">bold</item>
-    </style>
 
-    <style name="JPrimaryToolBar" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
-        <item name="android:textColorPrimary">@color/primaryColor</item>
-        <item name="android:textColorSecondary">@color/primaryColor</item>
+    <!--JPrimaryToolBar Start Region-->
+    <style name="JPrimaryToolBar" parent="Widget.MaterialComponents.Toolbar">
         <item name="android:background">@color/secondaryColor</item>
-        <item name="popupTheme">@style/JToolBarMenu</item>
+        <item name="titleTextColor">@color/primaryDarkColor</item>
         <item name="titleTextAppearance">@style/JPrimaryToolBar_Text</item>
     </style>
+    <!--TextEdit End Region-->
 
-    <style name="JPrimaryTabBar_Text" parent="TextAppearance.MaterialComponents.Button">
-        <item name="textAllCaps">true</item>
-        <item name="android:textColor">@color/primaryDarkColor</item>
-    </style>
-        
+
+    <!--TextEdit End Region-->
     <style name="JPrimaryTabBar" parent="Widget.Design.TabLayout">
         <item name="tabMaxWidth">@dimen/browser_actions_context_menu_max_width</item>
         <item name="tabTextAppearance">@style/JPrimaryTabBar_Text</item>
+        <item name="tabTextColor">@color/primaryDarkColor</item>
         <item name="tabIndicatorColor">@color/secondaryLightColor</item>
         <item name="tabIndicatorHeight">4dp</item>
         <item name="tabPaddingStart">6dp</item>
         <item name="tabPaddingEnd">6dp</item>
         <item name="tabBackground">@color/secondaryColor</item>
     </style>
+    <!--TextEdit End Region-->
 
+
+    <!--TextEdit End Region-->
     <style name="JPreferenceScreen" parent="Theme.MaterialComponents">
         <item name="android:textColorPrimary">@color/primaryTextColor</item>
         <item name="android:textColorSecondary">@color/primaryLightColor</item>
@@ -79,12 +100,43 @@
         <item name="preferenceScreenStyle">@style/PreferenceHeader</item>
         <item name="preferenceCategoryStyle">@style/PreferenceHeader</item>
     </style>
+    <!--TextEdit End Region-->
 
+
+    <!--TextEdit End Region-->
     <style name="PreferenceHeader" parent="Preference.Category">
         <item name="android:textColorPrimary">@color/primaryTextColor</item>
         <item name="android:textColorSecondary">@color/primaryLightColor</item>
         <item name="android:windowBackground">@color/primaryDarkColor</item>
     </style>
+    <!--TextEdit End Region-->
+
+
+    <!--UserProfileFragment Start Region-->
+    <style name="UserProfileImageView_back" parent="Theme.MaterialComponents">
+        <item name="android:src">@drawable/ic_user_default_profile</item>
+        <item name="android:background">@color/secondaryDarkColor</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="UserProfileImageView_front" parent="Theme.MaterialComponents">
+        <item name="android:background">@drawable/uprofile_icon</item>
+        <item name="android:src">@drawable/ic_user_default_profile</item>
+        <item name="android:scaleType">centerCrop</item>
+    </style>
+
+    <style name="UserProfileEditButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="iconPadding">0dp</item>
+        <item name="strokeColor">@color/secondaryDarkColor</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:minWidth">32dp</item>
+        <item name="android:minHeight">32dp</item>
+        <item name="icon">@drawable/ic_baseline_edit_24</item>
+    </style>
+    <!--UserProfileFragment End Region-->
 
 
 </resources>
