--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
 
     <color name="errorColor">#D50000</color>
     <color name="errorTextColor">#FFEBEE</color>
+
+    <color name="acceptColor">#00C853</color>
+    <color name="acceptTextColor">#FFEBEE</color>
 </resources>
